특정 팀 조회, 팀 수정, 팀장 권항 양도, 팀 목록 조회, 팀 나가기 수정